syntax = "proto3";

package ibc.applications.interchain_accounts.v1;

option go_package = "github.com/cosmos/ibc-go/v2/modules/apps/27-interchain-accounts/types";

import "gogoproto/gogo.proto";

// GenesisState defines the interchain accounts genesis state
message GenesisState {
  repeated ActiveChannel               active_channels     = 1 [(gogoproto.moretags) = "yaml:\"active_channels\""];
  repeated RegisteredInterchainAccount interchain_accounts = 2 [(gogoproto.moretags) = "yaml:\"interchain_accounts\""];
  repeated string                      ports               = 3;
}

// ActiveChannel contains a pairing of port ID and channel ID for an active interchain accounts channel
message ActiveChannel {
  string port_id    = 1 [(gogoproto.moretags) = "yaml:\"port_id\""];
  string channel_id = 2 [(gogoproto.moretags) = "yaml:\"channel_id\""];
}

// RegisteredInterchainAccount contains a pairing of controller port ID and associated interchain account address
message RegisteredInterchainAccount {
  string port_id         = 1 [(gogoproto.moretags) = "yaml:\"port_id\""];
  string account_address = 2 [(gogoproto.moretags) = "yaml:\"account_address\""];
}
